fix(twitterhandle): was the old one
bengthedev now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="Did you ever want to know if we were fucked already? Actually we might be quite close. Find the answer here and leave your vote!">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@benediktgrande">
+    <meta name="twitter:creator" content="@bengthedev">
     <meta name="twitter:url" content="https://arewefuckedyet.com">
     <meta name="twitter:title" content="Are we fucked yet? We're working on it!">
     <meta name="twitter:description" content="A dark view on current world politics and climate change">
