feat(carbonoffset): carbon offset doesn't work
why? are? we? so? fucked?

--- a/index.html
+++ b/index.html
@@ -244,6 +244,18 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/rain-forest.jpg" class="max-h-[200px] w-full object-cover" alt="Rain forest - well, should be offsetting carbon" loading="lazy" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Carbon offset</h3>
+                <p>
+                    Carbon offset doesn't work.
+                    It's basically <a href="https://www.theguardian.com/environment/2023/jan/18/revealed-forest-carbon-offsets-biggest-provider-worthless-verra-aoe" class="link" title="external link to The Guardian article about Verra and carbon offset payments">just useless sh**</a>.
+                    Who could have thought that buying yourself a clear conscience wouldn't work. I wouldn't even be surprised if it all was mostly an elaborate scam.
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
