feat(layout): content follows
make it more obvious that content follows after header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link href="tailwind.css" rel="stylesheet" media="all">
 </head>
 <body class="affiliate-off">
-<header class="min-h-screen">
+<header class="min-h-fit lg:mb-12">
     <div class="mt-4 mb-4 text-center lg:min-w-full lg:mb-24 lg:mt-16">
         <form id="vote_yesno">
             <p class="font-bold text-2xl mb-4">Are we fucked yet?</p>
