feat(ai): another thread
add the lying AI...

--- a/index.html
+++ b/index.html
@@ -256,6 +256,19 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/ai.jpg" class="max-h-[200px] w-full object-cover" alt="GPT4 as a computer chip illustration" loading="lazy" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">AI</h3>
+                <p>
+                    Fun fact: It might not be the singularity that kills us. Turns out a bit less than dumb text and conversation generator is sufficient.<br>
+                    Why? Because those generators are very confident in what they're 'saying', even if it's utter nonsense.
+                    While, until now, we had to rely on windbags like Trump, now everyone can create truthful sounding lies without much effort.
+                    And hoping for people double (fact) checking what they read seems to be very optimistic to me.
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
