feat(ai): another ai thread
the killing robot ai

--- a/index.html
+++ b/index.html
@@ -269,6 +269,19 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/robot.jpg" class="max-h-[200px] w-full object-cover" alt="Futurist robot that could be a killer robot" loading="lazy" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Military AI</h3>
+                <p>
+                    Have I mentioned AI?<br>
+                    Ah, yes, so <a href="https://www.vice.com/en/article/4a33gj/ai-controlled-drone-goes-rogue-kills-human-operator-in-usaf-simulated-test" class="link" title="external link to VICE article about AI Drone killing operator">the military is running tests</a> here as well.<br>
+                    And boy, they're doing great!
+                    I mean, this was a simulation, but it still shows how <em>creative</em> those AIs can get to reach their target.
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
