feat(ai): update killer ai
a bit more to read

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                     Ah, yes, so <a href="https://www.vice.com/en/article/4a33gj/ai-controlled-drone-goes-rogue-kills-human-operator-in-usaf-simulated-test" class="link" title="external link to VICE article about AI Drone killing operator">the military is running tests</a> here as well.<br>
                     And boy, they're doing great!
                     I mean, this was a simulation, but it still shows how <em>creative</em> those AIs can get to reach their target.
+                    So we're getting to the killer AI now, after all!
                 </p>
             </div>
         </div>
