feat(update): climate change update
we're very consistent in reaching all the goals here

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     And then... There's climate change.
                     This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link" title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
+                    And we're doing very well to reach every single 'goal' here.
                 </p>
             </div>
         </div>
