--- a/index.html
+++ b/index.html
@@ -284,6 +284,18 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/windows.jpg" class="max-h-[200px] w-full object-cover" alt="Windows as part of the deadly trio" loading="lazy" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">The deadly trio</h3>
+                <p>
+                   The IT Security related deadliest Software combination definitely is related to Windows + Outlook/MS Office + Active Directory/ADFS.<br>
+                   Well, trio somehow sounds better than quintet, so I left out Exchange. On the other hand that way we would get to the four horseman of the apocalypse...<br>
+                   Or to make it short: Microsoft plays a big role in Software related apocalypse.
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
