fix: improve 3rd party
should always defer and preload

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
     <style> .affiliate-off .affiliate.text, .affiliate-off img.affiliate {display: none;}</style>
     <link href="tailwind.css" rel="stylesheet" media="all">
+
+    <link rel="preload" href="https://usagelog.pagereply.com" />
+    <link rel="preload" href="https://yesno.pagereply.com" />
+
 </head>
 <body class="affiliate-off">
 <header class="min-h-fit lg:mb-12">
@@ -468,8 +472,8 @@
     </div>
 </footer>
 
-<script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer async></script>
-<script src="https://usagelog.pagereply.com/logjs?source=arewefuckedyet.com" defer async></script>
+<script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer></script>
+<script src="https://usagelog.pagereply.com/logjs?source=arewefuckedyet.com" defer></script>
 <script type="application/javascript">
     const setCookie = function setCookie(name, value) {
         const expires = new Date();
