fix: use preconnect instead of preload

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <style> .affiliate-off .affiliate.text, .affiliate-off img.affiliate {display: none;}</style>
     <link href="tailwind.css" rel="stylesheet" media="all">
 
-    <link rel="preload" href="https://usagelog.pagereply.com" />
-    <link rel="preload" href="https://yesno.pagereply.com" />
+    <link rel="preconnect" href="https://usagelog.pagereply.com" />
+    <link rel="preconnect" href="https://yesno.pagereply.com" />
 
     <script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer></script>
     <script src="https://usagelog.pagereply.com/logjs?source=arewefuckedyet.com" defer></script>
