--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <figure><img src="/img/covid.jpg" class="max-h-[200px] w-full object-cover" alt="Earth depicted as corona virus - covid" loading="lazy" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Pandemic</h3>
-                <p>COVID-19 is still around, while not only having a huge death toll, producing long-term sickness and restricting our way of life as well as affecting mental health.</p>
+                <p>COVID-19 was bad, while not only having a huge death toll, producing long-term sickness and restricting our way of life as well as affecting mental health.</p>
+                <p>Next pandemics are to come, unfortunately.</p>
             </div>
         </div>
 
@@ -214,6 +215,16 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/trump.jpg" class="max-h-[200px] w-full object-cover" alt="Trump masked pointing fingers at the camera in front of the Whhite House" loading="lazy" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Trump reelection</h3>
+                <p>
+                   If Trump gets reelected, which is quite likely imho, this will be another step in the direction of 'yes'...
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
@@ -234,7 +245,8 @@
         </div>
         <div class="w-full">
             <span class="footer-title">Attribution</span>
-            Beer Bottle Photo by <a href="https://unsplash.com/@storyninetyfour?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Story Ninety-Four</a> on <a href="https://unsplash.com/s/photos/beer-bottle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Unsplash</a>
+            Beer Bottle photo by <a href="https://unsplash.com/@storyninetyfour?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Story Ninety-Four</a> on <a href="https://unsplash.com/s/photos/beer-bottle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Unsplash</a>
+            Trump Mask photo by <a href="https://unsplash.com/de/@darren1303?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Darren Halstead</a> auf <a href="https://unsplash.com/de/fotos/mann-mit-donald-trump-maske-steht-vor-dem-weissen-haus-B_vXFdzvw3g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </div>
     </div>
     <div class="footer-center md:pl-6 md:pr-6 pb-6 flex flex-col md:flex-row justify-center md:justify-between">
