--- a/authors-take.html
+++ b/authors-take.html
@@ -110,7 +110,7 @@
             <a class="relative w-full h-[400px] overflow-hidden js-youtube" data-src="https://www.youtube-nocookie.com/embed/M7hOpT0lPGI" href="#">
                 <span class="relative">
                     <img src="https://i.ytimg.com/vi_webp/M7hOpT0lPGI/sddefault.webp" alt="Just a youtube video preview" loading="lazy" />
-                    <span class="absolute flex p-8 w-[100%]">
+                    <span class="absolute flex p-8 top-0">
                         <span class="justify-center items-center bg-base-100 p-2 text-center">
                             By clicking the preview you hereby consent to allow YouTube's cookies and tracking functionality (consent will be saved for 1 week). <br><br>
                             <b class="btn btn-default">Consent</b>
@@ -158,7 +158,7 @@
             <a class="relative w-full h-[400px] overflow-hidden js-youtube" data-src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" href="#">
                 <span class="relative">
                     <img src="https://i.ytimg.com/vi_webp/3iknWWKZOUs/sddefault.webp" alt="Just a youtube video preview" loading="lazy" />
-                    <span class="absolute flex p-8 w-[100%]">
+                    <span class="absolute flex p-8 top-0">
                         <span class="justify-center items-center bg-base-100 p-2 text-center">
                             By clicking the preview you hereby consent to allow YouTube's cookies and tracking functionality (consent will be saved for 1 week). <br><br>
                             <b class="btn btn-default">Consent</b>
