--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
 
         <div class="card w-96 bg-base-100 shadow-xl">
-            <figure><img src="/img/trump.jpg" class="max-h-[200px] w-full object-cover" alt="Trump masked pointing fingers at the camera in front of the Whhite House" loading="lazy" /></figure>
+            <figure><img src="/img/trump.jpg" class="max-h-[200px] w-full object-cover" alt="Trump masked pointing fingers at the camera in front of the White House" loading="lazy" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Trump reelection</h3>
                 <p>
