--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
         <div class="card w-96 bg-base-100 shadow-xl">
             <figure><img src="/img/trump.jpg" class="max-h-[200px] w-full object-cover" alt="Trump masked pointing fingers at the camera in front of the White House" loading="lazy" /></figure>
             <div class="card-body">
-                <h3 class="card-title">Trump reelection</h3>
+                <h3 class="card-title">Trump re-election</h3>
                 <p>
-                   If Trump gets reelected, which is quite likely imho, this will be another step in the direction of 'yes'...
+                   If Trump gets re-elected, which is quite likely imho, this will be another step in the direction of 'yes'...
                 </p>
             </div>
         </div>
