feat: improve descriptions
add titles and link css;
add more information in sitemap.xml;

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <figure><img src="/img/bundestag.jpg" class="max-h-[200px] w-full object-cover" alt="German Bundestag with German flag" loading="lazy" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Germany</h3>
-                <p>Trust me, you don't want to see headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a>. Because, well, last time it went so well...</p>
+                <p>Trust me, you don't want to see headlines like <a class="link" href="https://text.npr.org/1087137501" title="external link to article about Germany's military plans">Germany is supposedly building Europe's largest military</a>. Because, well, last time it went so well...</p>
                 <p>Ok, that one is a joke! Luckily it's not like that anymore.</p>
             </div>
         </div>
@@ -112,6 +112,7 @@
                     This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link" title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
                     And we're doing very well to reach every single 'goal' here.
+                    Right now it seems <a href="https://www.theguardian.com/environment/article/2024/may/08/world-scientists-climate-failure-survey-global-temperature" class="link" title="external link to an article about how we're probably going to blast past 1.5 degrees target">we're not going to reach our current goals</a>.
                 </p>
             </div>
         </div>
@@ -211,7 +212,7 @@
                    The IT Security related deadliest Software combination definitely is related to Windows + Outlook/MS Office + Active Directory/ADFS.<br>
                    Well, trio somehow sounds better than quintet, so I left out Exchange. On the other hand that way we would get to the four horseman of the apocalypse...<br>
                    Or to make it short: Microsoft plays a big role in Software related apocalypse.<br>
-                   Oh, and did I mention <a href="https://en.wikipedia.org/wiki/2024_CrowdStrike-related_IT_outages">Crowdstrike</a>?
+                   Oh, and did I mention <a href="https://en.wikipedia.org/wiki/2024_CrowdStrike-related_IT_outages" class="link" title="external link to article about the crowdstrike incident">Crowdstrike</a>?
                 </p>
             </div>
         </div>
@@ -246,7 +247,7 @@
         <div class="w-full">
             <span class="footer-title">Attribution</span>
             Beer Bottle photo by <a href="https://unsplash.com/@storyninetyfour?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Story Ninety-Four</a> on <a href="https://unsplash.com/s/photos/beer-bottle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Unsplash</a>
-            Trump Mask photo by <a href="https://unsplash.com/de/@darren1303?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Darren Halstead</a> auf <a href="https://unsplash.com/de/fotos/mann-mit-donald-trump-maske-steht-vor-dem-weissen-haus-B_vXFdzvw3g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+            Trump Mask photo by <a href="https://unsplash.com/de/@darren1303?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" clasS="link">Darren Halstead</a> auf <a href="https://unsplash.com/de/fotos/mann-mit-donald-trump-maske-steht-vor-dem-weissen-haus-B_vXFdzvw3g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" class="link">Unsplash</a>
         </div>
     </div>
     <div class="footer-center md:pl-6 md:pr-6 pb-6 flex flex-col md:flex-row justify-center md:justify-between">
