chore: update trump

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                 <h3 class="card-title">Trump re-election</h3>
                 <p>
                    If Trump gets re-elected, which is quite likely imho, this will be another step in the direction of 'yes'...
-                    <i>Well, it seems it's happening exactly what I was afraid of</i>
+                    <i>Well, it seems it's happening exactly what I was afraid of</i>.<br>
+                    <i>And it seems others don't like it, too. Before 2025, the polls weren't almost 80% in favor of 'yes'</i>.
                 </p>
             </div>
         </div>
