--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             <div class="card-body">
                 <h3 class="card-title">Trump re-election</h3>
                 <p>
-                   If Trump gets re-elected, which is quite likely imho, this will be another step in the direction of 'yes'...
+                   If Trump gets re-elected, which is quite likely imho, this will be another step in the direction of 'yes'...<br>
                     <i>Well, it seems it's happening exactly what I was afraid of</i>.<br>
-                    <i>And it seems others don't like it, too. Before 2025, the polls weren't almost 80% in favor of 'yes'</i>.
+                    <i>And it seems others don't like it, too. Before 2025, the polls were far away from 80% in favor of 'yes'</i>.
                 </p>
             </div>
         </div>
